# isaac

./: .dockerignore  .env.example  .gitignore  CITATION.cff  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: setup-guide.md  status-report.md
scripts/: env.sh  run-in-container.sh  setup-remote.sh  soarm-setup.sh  soarm-train.sh  verify-and-train.sh
slurm/: _run.sh  build.sh  play.sh  train.sh
src/isaac_so_arm101/: __init__.py
src/isaac_so_arm101/robots/: __init__.py
src/isaac_so_arm101/robots/so_arm101/: __init__.py  so_arm101.py
src/isaac_so_arm101/scripts/rsl_rl/: cli_args.py  play.py
src/isaac_so_arm101/tasks/lift/: __init__.py  joint_pos_env_cfg.py  lift_env_cfg.py
src/isaac_so_arm101/tasks/lift/mdp/: __init__.py  rewards.py
src/isaac_so_arm101/tasks/reach/: __init__.py  joint_pos_env_cfg.py  reach_env_cfg.py
